FIX Qualified sub requirements calculation